Fix Alignment of Textless Boxes

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -163,8 +163,8 @@ a.choice {
   }
 }
 
-.title {
-  margin-bottom: 0.25rem;
+.text {
+  margin-top: 0.25rem;
 }
 
 hr {
